--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "got": "^11.8.0",
     "jest": "^26.6.3",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
