--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "commonjs",
-    "lib": ["es2019"],
+    "lib": ["es2019", "dom"],
     "allowJs": true,
     "outDir": "build",
     "rootDirs": ["src", "tests"],
